# bead

./: .gitignore  .travis.yml  Bead.cabal  CHANGELOG  CONTRIBUTORS  Dockerfile  ISSUES  LICENSE  MANUAL.md  README.md  RELEASE-NOTES  TODO  bead.config  bead.ldap.config  bead.std.config  report.sh  stack.yaml  start-ghci  start-ghci-noldap  start-ghci-nosso  start-ghci-sql  test.sh
backend/rc.d/: beadd
backend/scripts/: bead
backend/scripts/modules/: bulk.sh  common.sh  test.sh  watchdog.sh
backend/scripts/templates/: build.sh  run.sh
doc/: mysql-backend.md
docker/: README.md  build.sh  remove-all-images.sh  run.sh  travis-test.sh
docker/container-script/: dev-env-setup.sh
email/: forgottenpwd  registration
html-templates/: Assignment.htm  CourseAdmin.htm  Evaluation.htm  Home.htm  Profile.htm  TestScript.htm  readme.txt
lang/: DictionaryHu.hs  hu.dict
main/: Admin.hs  Main.hs
snaplets/fay/: devel.cfg
snaplets/fay/src/: DynamicContents.hs
snaplets/fay/src/Bead/Domain/: Shared.hs
snaplets/fay/src/Bead/Shared/: Command.hs
snaplets/fay/src/Bead/View/: Validators.hs
snaplets/fay/src/Fay/: JQueryUI.hs
src/: AdminMain.hs  Main.hs  SnapMain.hs  UtilsMain.hs
src/Bead/: Config.hs  Configuration.hs  Invariants.hs
src/Bead/Config/: Configuration.hs  Parser.hs
src/Bead/Controller/: Logging.hs  LogoutDaemon.hs  Pages.hs  ServiceContext.hs  UserStories.hs
src/Bead/Daemon/: Email.hs  EmailDaemon.hs  LDAP.hs  Logout.hs  LogoutDaemon.hs  NotificationEmail.hs  TestAgent.hs  TestAgentDaemon.hs
src/Bead/Daemon/LDAP/: Auth.hs  Query.hs  Result.hs
src/Bead/Domain/: Entities.hs  Evaluation.hs  Evaulation.hs  Func.hs  Relationships.hs  RolePermission.hs  TimeZone.hs  Types.hs
src/Bead/Domain/Entity/: Assessment.hs  Assignment.hs  Comment.hs  Feedback.hs  Notification.hs  TestCase.hs
src/Bead/Domain/Relationships/: SubmissionInfo.hs
src/Bead/Persistence/: Guards.hs  Initialization.hs  NoSQLDir.hs  NoSQLDirFile.hs  Persist.hs  Relations.hs  SQL.hs
src/Bead/Persistence/NoSQL/: Loader.hs
src/Bead/Persistence/SQL/: Assessment.hs  Assignment.hs  Class.hs  Comment.hs  Course.hs  Entities.hs  Evaluation.hs  Feedback.hs  FileSystem.hs  Group.hs  Init.hs  JSON.hs  MySQL.hs  MySQLTestRunner.hs  Notification.hs  Registration.hs  Score.hs  Submission.hs  TestCase.hs  TestComment.hs  TestData.hs  TestFeedback.hs  TestJob.hs  TestScript.hs  User.hs
src/Bead/View/: Anchor.hs  BeadContext.hs  BeadContextInit.hs  Common.hs  Content.hs  ContentHandler.hs  DataBridge.hs  DataDir.hs  Dictionary.hs  DictionaryLoader.hs  EmailTemplate.hs  ErrorPage.hs  I18N.hs  LoggedInFilter.hs  Logger.hs  Login.hs  Markdown.hs  Pagelets.hs  Registration.hs  RequestParams.hs  ResetPassword.hs  RouteOf.hs  Routing.hs  Session.hs  Style.hs  TemplateAndComponentNames.hs  Translation.hs  TranslationEnum.hs  UserActions.hs
src/Bead/View/Cli/: Login.hs
src/Bead/View/Command/: All.hs  Fayax.hs  Ping.hs  Refresh.hs
src/Bead/View/Content/: All.hs  Bootstrap.hs  Comments.hs  GetCourseCsv.hs  GetCsv.hs  GetGroupCsv.hs  GetSubmission.hs  ScoreInfo.hs  SeeMore.hs  SubmissionTable.hs  Utils.hs  VisualConstants.hs
src/Bead/View/Content/Administration/: Page.hs
src/Bead/View/Content/Assessment/: Page.hs
src/Bead/View/Content/Assignment/: Data.hs  Page.hs  View.hs
src/Bead/View/Content/CourseAdmin/: Page.hs
src/Bead/View/Content/CourseOverview/: Page.hs
src/Bead/View/Content/Evaluation/: Page.hs
src/Bead/View/Content/EvaluationTable/: Page.hs
src/Bead/View/Content/GroupRegistration/: Page.hs
src/Bead/View/Content/Home/: Data.hs  Page.hs  View.hs
src/Bead/View/Content/NewTestScript/: Page.hs
src/Bead/View/Content/Notifications/: Page.hs
src/Bead/View/Content/Profile/: Page.hs
src/Bead/View/Content/Public/: ErrorPage.hs  Index.hs  Login.hs  Registration.hs  ResetPassword.hs
src/Bead/View/Content/Score/: Page.hs
src/Bead/View/Content/SetUserPassword/: Page.hs
src/Bead/View/Headers/: AcceptLanguage.hs
src/Bead/View/Snap/: AppInit.hs  Application.hs  BeadContext.hs  BeadContextInit.hs  Blaze.hs  Content.hs  ContentHandler.hs  DataBridge.hs  DataDir.hs  Dictionary.hs  DictionaryLoader.hs  EmailTemplate.hs  ErrorPage.hs  HandlerUtils.hs  I18N.hs  I18NHtml.hs  InputHandlers.hs  LoggedInFilter.hs  Logger.hs  Login.hs  Markdown.hs  PageHandlers.hs  Pagelets.hs  Registration.hs  RequestParams.hs  ResetPassword.hs  RouteOf.hs  Routing.hs  Session.hs  Style.hs  TemplateAndComponentNames.hs  Translation.hs  TranslationEnum.hs
src/Bead/View/Translation/: Base.hs  Entries.hs  Enum.hs  I18N.hs
src/Control/Monad/: Transaction.hs
src/Control/Monad/Transaction/: IO.hs  TIO.hs
src/Test/Tasty/: Arbitrary.hs  Encaps.hs  Keyword.hs  RandomData.hs  TestSet.hs
src/Text/: CSS.hs
src/Text/CSS/: Internal.hs  Pretty.hs
static/: bootstrap.custombutton.css  bootstrap.min.css  header.css  inside.css  jquery-ui.css  jquery-ui.js  screen.css
test/: CabalTestSuite.hs  SeleniumMain.hs  TestMain.hs  WebDriverMain.hs
test/Control/Monad/TestContext/: Trans.hs
test/Data/: AndOr.hs
test/Test/Components/: TestComponents.hs
test/Test/KeyCheck/: HUnit.hs  IOKeyword.hs  Keyword.hs  TKeyword.hs
test/Test/Model/: UserStory.hs
test/Test/Persistence/: Persist.hs
test/Test/Property/: EntityGen.hs  Persistence.hs
test/Test/Quick/: EntityGen.hs  EnumGen.hs  Generators.hs  PageGen.hs  Persistence.hs  RolePermissionGen.hs
test/Test/Regression/: UserStory.hs
test/Test/Tasty/: BeadHandler.hs
test/Test/Unit/: Invariants.hs  Module.hs  Persistence.hs  UserStory.hs
test/Test/Unit/Persistence/: TestNoSQLDir.hs
test/Test/UserStories/: Keyword.hs  TestStories.hs
test/Test/WebDriver/: Frames.hs  PageObject.hs  Positives.hs  SitePages.hs  Support.hs  TestRunner.hs  Tools.hs  UserStories.hs
test/Test/WebDriver/Support/: DatePicker.hs  Input.hs  Select.hs  Table.hs
util/Bead/Util/: CreateTestDB.hs
util/export/: common.sh  exportCourseAssignments.sh  exportCourseSubmissions.sh  exportGroupAssignments.sh  exportGroupSubmissions.sh  exportSubmissions.sh
util/tester/: runScript
(+91 files in other folders)
