Name:                Bead
Version:             0.1.0.0
License:             BSD3
synopsis:            Online assignment management system
Description:         E-learning snap based server for special teaching purposes
                     Administrators can submit exercises and students can submit
                     solutions for the given exercises.
Author:              Andor Penzes <andor.penzes@gmail.com>
Maintainer:          andor.penzes@gmail.com
Stability:           Experimental
Build-Type:          Simple
Cabal-Version:       >= 1.8

Data-Files:
  snaplets/fay/devel.cfg,
  snaplets/fay/src/Fay/JQueryUI.hs,
  snaplets/fay/src/DynamicContents.hs,
  snaplets/fay/src/Bead/Domain/Shared/Evaluation.hs,
  snaplets/fay/src/Bead/Shared/Command.hs,
  snaplets/fay/src/Bead/View/Validators.hs,
  snaplets/fay/src/Bead/View/Fay/HookIds.hs,
  snaplets/fay/src/Bead/View/Fay/Hooks.hs,
  snaplets/fay/src/Bead/View/Fay/JSON/ClientSide.hs,

  static/fonts/glyphicons-halflings-regular.woff,
  static/fonts/glyphicons-halflings-regular.ttf,
  static/bootstrap.custombutton.css,
  static/bootstrap.min.css,
  static/bootstrap.min.js,
  static/bootstrap-combobox.css,
  static/bootstrap-combobox.js,
  static/bootstrap-datetimepicker.min.css,
  static/bootstrap-datetimepicker.min.js,
  static/header.css,
  static/helpers.js,
  static/inside.css,
  static/jquery-ui.css,
  static/jquery.js,
  static/jquery-ui.js,
  static/moment.js,
  static/screen.css,
  static/images/*.png,
  static/images/*.gif,
  static/icon.ico,

  cookie

  lang/DictionaryHu.hs

  bead.config

Flag Tests
  Description:  Enable testing
  Default:      False

Flag SQLite
  Description:  Enable SQLite persistent layer
  Default:      False

Flag LDAP
  Description:  Enable LDAP based authentication
  Default:      True

Library
  HS-Source-Dirs: src, snaplets/fay/src
  GHC-Options: -threaded -with-rtsopts=-N2 -O2

  if flag(SQLite)
    CPP-Options: -DSQLITE

    Build-Depends:
      persistent-sqlite >= 1.3,
      persistent-template >= 1.3,
      resourcet >= 1.1

    Exposed-Modules:
      Bead.Persistence.SQL
      Bead.Persistence.SQL.Assessment
      Bead.Persistence.SQL.Assignment
      Bead.Persistence.SQL.Class
      Bead.Persistence.SQL.Comment
      Bead.Persistence.SQL.Course
      Bead.Persistence.SQL.Entities
      Bead.Persistence.SQL.Evaluation
      Bead.Persistence.SQL.Feedback
      Bead.Persistence.SQL.FileSystem
      Bead.Persistence.SQL.Group
      Bead.Persistence.SQL.Init
      Bead.Persistence.SQL.JSON
      Bead.Persistence.SQL.Notification
      Bead.Persistence.SQL.Registration
      Bead.Persistence.SQL.Score
      Bead.Persistence.SQL.Submission
      Bead.Persistence.SQL.TestCase
      Bead.Persistence.SQL.TestData
      Bead.Persistence.SQL.TestFeedback
      Bead.Persistence.SQL.TestJob
      Bead.Persistence.SQL.TestScript
      Bead.Persistence.SQL.User

  Exposed-modules:
    Bead.Persistence.NoSQLDir
    Bead.Persistence.NoSQLDirFile
    Control.Monad.Transaction
    Control.Monad.Transaction.IO
    Control.Monad.Transaction.TIO

  if flag(Tests)
    CPP-Options: -DTEST
    Build-Depends:
      QuickCheck, themis >= 0.4.1.0

  if flag(LDAP)
    CPP-Options: -DLDAPEnabled

    Build-Depends:
      base64-bytestring >= 1.0.0.1 && < 2,
      either >= 4.3 && < 5

    Exposed-Modules:
      Bead.Daemon.LDAP
      Bead.Daemon.LDAP.Auth
      Bead.Daemon.LDAP.Result
  else
    CPP-Options: -DEmailEnabled

    Exposed-Modules:
      Bead.Daemon.Email
      Bead.View.Content.SetUserPassword.Page
      Bead.View.EmailTemplate
      Bead.View.ResetPassword

  Build-Depends:
    aeson,
    async,
    base,
    blaze-html,
    blaze-markup,
    bytestring,
    containers,
    clientsession,
    deepseq,
    directory,
    hashable,
    haskell-src-exts == 1.15.0.1,
    fay,
    fay-jquery,
    fay-text,
    filepath,
    ghc,
    ghc-paths,
    hastache >= 0.6,
    json >= 0.7,
    lens,
    mime-mail,
    MissingH,
    MonadCatchIO-transformers,
    monad-logger >= 0.3,
    old-locale,
    pandoc,
    pqueue >= 1.2.0 && < 2.0,
    mtl,
    process >= 1.2.0 && < 2.0,
    random,
    regex-tdfa,
    snap,
    snap-core,
    snap-server,
    snap-blaze,
    snaplet-fay == 0.3.3.7,
    stm,
    syb,
    temporary,
    text,
    time,
    timezone-olson >= 0.1.4,
    timezone-series >= 0.1.2,
    transformers,
    utf8-string,
    unix,
    yaml >= 0.8.8.4 && < 0.9,
    xmlhtml

  Exposed-Modules:
    AdminMain
    SnapMain
    Bead.View.Dictionary
    Bead.View.Translation

    Paths_Bead
    Bead.Config
    Bead.Config.Configuration
    Bead.Config.Parser
    Bead.Controller.Logging
    Bead.Controller.Pages
    Bead.Controller.ServiceContext
    Bead.Controller.UserStories
    Bead.Daemon.Logout
    Bead.Daemon.TestAgent
    Bead.Domain.Entity.Assessment
    Bead.Domain.Entity.Assignment
    Bead.Domain.Entity.Comment
    Bead.Domain.Entity.Feedback
    Bead.Domain.Entity.Notification
    Bead.Domain.Entity.TestCase
    Bead.Domain.Entities
    Bead.Domain.Evaluation
    Bead.Domain.Func
    Bead.Domain.Relationships
    Bead.Domain.RolePermission
    Bead.Domain.Shared.Evaluation
    Bead.Domain.TimeZone
    Bead.Domain.Types
    Bead.Persistence.Guards
    Bead.Persistence.Initialization
    Bead.Persistence.Persist
    Bead.Persistence.Relations
    Bead.Shared.Command
    Bead.View.BeadContext
    Bead.View.BeadContextInit
    Bead.View.Command.Fayax
    Bead.View.Content
    Bead.View.Content.Administration.Page
    Bead.View.Content.Assignment.Data
    Bead.View.Content.Assignment.Page
    Bead.View.Content.Assignment.View
    Bead.View.Content.CourseAdmin.Page
    Bead.View.Content.CourseOverview.Page
    Bead.View.Content.Evaluation.Page
    Bead.View.Content.EvaluationTable.Page
    Bead.View.Content.GroupRegistration.Page
    Bead.View.Content.Home.Data
    Bead.View.Content.Home.Page
    Bead.View.Content.Home.View
    Bead.View.Content.NewTestScript.Page
    Bead.View.Content.Profile.Page
    Bead.View.Content.Public.ErrorPage
    Bead.View.Content.Public.Login
    Bead.View.Content.Public.Registration
    Bead.View.Content.Public.ResetPassword
    Bead.View.Content.Submission.Common
    Bead.View.Content.Submission.Page
    Bead.View.Content.SubmissionDetails.Page
    Bead.View.Content.SubmissionList.Page
    Bead.View.Content.TestScript.Page
    Bead.View.Content.UploadFile.Page
    Bead.View.Content.UserDetails.Page
    Bead.View.Content.UserSubmissions.Page
    Bead.View.Content.All
    Bead.View.Content.Bootstrap
    Bead.View.Content.Comments
    Bead.View.Content.GetSubmission
    Bead.View.Content.SeeMore
    Bead.View.Content.SubmissionTable
    Bead.View.Content.Utils
    Bead.View.ContentHandler
    Bead.View.DataBridge
    Bead.View.DataDir
    Bead.View.DictionaryLoader
    Bead.View.ErrorPage
    Bead.View.Headers.AcceptLanguage
    Bead.View.Fay.Hooks
    Bead.View.Fay.HookIds
    Bead.View.Fay.JSON.ServerSide
    Bead.View.I18N
    Bead.View.LoggedInFilter
    Bead.View.Login
    Bead.View.Logger
    Bead.View.Markdown
    Bead.View.Pagelets
    Bead.View.Registration
    Bead.View.RequestParams
    Bead.View.RouteOf
    Bead.View.Routing
    Bead.View.Session
    Bead.View.Style
    Bead.View.TemplateAndComponentNames
    Bead.View.TranslationEnum
    Bead.View.UserActions
    Bead.View.Validators
    Bead.Invariants
    Snap.Snaplet.Auth.Backends.SafeJsonFile

Executable Bead
  Build-Depends:    base, Bead
  Main-is:          Main.hs
  HS-Source-Dirs:   main
  Buildable:        True

Executable BeadAdmin
  Build-Depends:    base, Bead
  Main-is:          Admin.hs
  HS-Source-Dirs:   main
  Buildable:        True

test-suite BeadUnitTest
  type: exitcode-stdio-1.0
  if flag(Tests)
    Buildable: True
    Build-Depends:
      base, Bead, bytestring, containers, directory, filepath, HUnit,
      QuickCheck, temporary, test-framework, test-framework-hunit,
      test-framework-quickcheck2, themis, time, transformers
  else
    Buildable: False
  if flag(LDAP)
    CPP-Options: -DLDAPEnabled -DTEST
  else
    CPP-Options: -DEmailEnabled -DTEST
  if flag(SQLite)
    CPP-Options: -DTEST -DSQLITE
    Build-Depends:
      persistent-sqlite >= 1.3,
      persistent-template >= 1.3,
      resourcet >= 1.1
  else
    CPP-Options: -DTEST
  HS-Source-Dirs: test
  Main-is: TestMain.hs

--Executable BeadEnd2EndTests
--  if flag(Tests)
--    Buildable: True
--  else
--    Buildable: False
--  Main-is: WebDriverMain.hs
--  HS-Source-Dirs: src, snaplets/fay/src, test
--  Build-Depends: base, directory, containers, filepath, time, parsec, mtl,
--                 transformers, network, webdriver

