Name:                Bead
Version:             0.1.0.0
License:             BSD3
synopsis:            Online assignment management system
Description:         E-learning snap based server for special teaching purposes
                     Administrators can submit exercises and students can submit
                     solutions for the given exercises.
Author:              Andor Penzes <andor.penzes@gmail.com>
Maintainer:          andor.penzes@gmail.com
Stability:           Experimental
Build-Type:          Simple
Cabal-Version:       >= 1.8

Data-Files:
  snaplets/fay/devel.cfg,
  snaplets/fay/src/Fay/JQueryUI.hs,
  snaplets/fay/src/DynamicContents.hs,
  snaplets/fay/src/Bead/Domain/Shared/Evaluation.hs,
  snaplets/fay/src/Bead/Shared/Command.hs,
  snaplets/fay/src/Bead/View/Validators.hs,
  snaplets/fay/src/Bead/View/Fay/HookIds.hs,
  snaplets/fay/src/Bead/View/Fay/Hooks.hs,
  snaplets/fay/src/Bead/View/Fay/JSON/ClientSide.hs,

  static/fonts/glyphicons-halflings-regular.woff,
  static/fonts/glyphicons-halflings-regular.ttf,
  static/bootstrap.custombutton.css,
  static/bootstrap.min.css,
  static/bootstrap.min.js,
  static/bootstrap-combobox.css,
  static/bootstrap-combobox.js,
  static/bootstrap-datetimepicker.min.css,
  static/bootstrap-datetimepicker.min.js,
  static/header.css,
  static/helpers.js,
  static/inside.css,
  static/jquery-ui.css,
  static/jquery.js,
  static/jquery-ui.js,
  static/moment.js,
  static/screen.css,
  static/images/*.png,
  static/images/*.gif,
  static/icon.ico,

  cookie

  lang/DictionaryHu.hs

  bead.config

Flag Tests
  Description:  Enable testing
  Default:      False

Flag SQLite
  Description:  Enable SQLite persistent layer
  Default:      False

Flag LDAP
  Description:  Enable LDAP based authentication
  Default:      True

Library
  HS-Source-Dirs: src, snaplets/fay/src
  GHC-Options: -threaded -with-rtsopts=-N2 -O2

  if flag(SQLite)
    CPP-Options: -DSQLITE

    Build-Depends:
      persistent-sqlite >= 1.3,
      persistent-template >= 1.3,
      resourcet >= 1.1

    Exposed-Modules:
      Bead.Persistence.SQL
      Bead.Persistence.SQL.Assessment
      Bead.Persistence.SQL.Assignment
      Bead.Persistence.SQL.Class
      Bead.Persistence.SQL.Comment
      Bead.Persistence.SQL.Course
      Bead.Persistence.SQL.Entities
      Bead.Persistence.SQL.Evaluation
      Bead.Persistence.SQL.Feedback
      Bead.Persistence.SQL.FileSystem
      Bead.Persistence.SQL.Group
      Bead.Persistence.SQL.Init
      Bead.Persistence.SQL.JSON
      Bead.Persistence.SQL.Notification
      Bead.Persistence.SQL.Registration
      Bead.Persistence.SQL.Score
      Bead.Persistence.SQL.Submission
      Bead.Persistence.SQL.TestCase
      Bead.Persistence.SQL.TestData
      Bead.Persistence.SQL.TestFeedback
      Bead.Persistence.SQL.TestJob
      Bead.Persistence.SQL.TestScript
      Bead.Persistence.SQL.User

  Exposed-modules:
    Bead.Persistence.NoSQLDir
    Bead.Persistence.NoSQLDirFile
    Control.Monad.Transaction
    Control.Monad.Transaction.IO
    Control.Monad.Transaction.TIO

  if flag(Tests)
    CPP-Options: -DTEST

  if flag(LDAP)
    CPP-Options: -DLDAPEnabled

    Build-Depends:
      base64-bytestring >= 1.0.0.1 && < 2,
      either >= 4.3 && < 5

    Exposed-Modules:
      Bead.Daemon.LDAP
      Bead.Daemon.LDAP.Auth
      Bead.Daemon.LDAP.Result
  else
    CPP-Options: -DEmailEnabled

    Exposed-Modules:
      Bead.Daemon.Email
      Bead.View.Content.SetUserPassword.Page
      Bead.View.EmailTemplate
      Bead.View.ResetPassword

  Build-Depends:
    aeson == 0.7.0.6,
    async == 2.0.1.5,
    base == 4.7.0.1,
    blaze-html == 0.7.0.2,
    blaze-markup == 0.6.1.0,
    bytestring == 0.10.4.0,
    containers == 0.5.5.1,
    clientsession == 0.9.1.1,
    cpphs == 1.19,
    deepseq == 1.3.0.2,
    directory == 1.2.1.0,
    hashable == 1.2.2.0,
    haskell-src-exts == 1.15.0.1,
    HUnit == 1.2.5.2,
    fay >= 0.20 && < 0.21,
    fay-jquery >= 0.6.0 && < 0.6.1,
    fay-text >= 0.3.0 && < 0.3.2,
    filepath == 1.3.0.2,
    ghc == 7.8.3,
    ghc-paths == 0.1.0.9,
    hastache >= 0.6 && < 0.7,
    json >= 0.7 && < 0.8,
    lens == 4.3.3,
    mime-mail == 0.4.8.2,
    MissingH == 1.2.1.0,
    MonadCatchIO-transformers == 0.3.1.0,
    monad-logger == 0.3.13.1,
    old-locale == 1.0.0.6,
    pandoc >= 1.12 && < 1.14,
    persistent-sqlite >= 2.2 && < 2.3,
    persistent-template >= 2.1 && < 2.2,
    pqueue >= 1.2.0 && < 2.0,
    mtl >= 2.0 && < 2.4,
    process >= 1.2.0 && < 2.0,
    random == 1.1,
    regex-tdfa == 1.2.0,
    snap >= 0.13 && < 0.14,
    snap-core >= 0.9 && < 0.10,
    snap-server >= 0.9 && < 0.10,
    snap-blaze >= 0.2 && < 0.3,
    snaplet-fay == 0.3.3.7,
    stm == 2.4.4,
    syb == 0.4.4,
    template-haskell,
    temporary == 1.2.0.3,
    text == 1.1.0.0,
    time == 1.4.2,
    timezone-olson == 0.1.6,
    timezone-series == 0.1.4,
    transformers >= 0.3 && < 0.5,
    utf8-string == 0.3.8,
    unix == 2.7.0.1,
    yaml >= 0.8.8.4 && < 0.9,
    tasty == 0.8.1.3,
    tasty-hunit == 0.9.2,
    tasty-quickcheck == 0.8.3,
    QuickCheck == 2.8.1,
    xmlhtml == 0.2.3.4

  Exposed-Modules:
    AdminMain
    SnapMain
    Bead.View.Dictionary
    Bead.View.Translation

    Paths_Bead
    Bead.Config
    Bead.Config.Configuration
    Bead.Config.Parser
    Bead.Controller.Logging
    Bead.Controller.Pages
    Bead.Controller.ServiceContext
    Bead.Controller.UserStories
    Bead.Daemon.Logout
    Bead.Daemon.TestAgent
    Bead.Domain.Entity.Assessment
    Bead.Domain.Entity.Assignment
    Bead.Domain.Entity.Comment
    Bead.Domain.Entity.Feedback
    Bead.Domain.Entity.Notification
    Bead.Domain.Entity.TestCase
    Bead.Domain.Entities
    Bead.Domain.Evaluation
    Bead.Domain.Func
    Bead.Domain.Relationships
    Bead.Domain.RolePermission
    Bead.Domain.Shared.Evaluation
    Bead.Domain.TimeZone
    Bead.Domain.Types
    Bead.Persistence.Guards
    Bead.Persistence.Initialization
    Bead.Persistence.Persist
    Bead.Persistence.Relations
    Bead.Shared.Command
    Bead.View.BeadContext
    Bead.View.BeadContextInit
    Bead.View.Command.Fayax
    Bead.View.Content
    Bead.View.Content.Administration.Page
    Bead.View.Content.Assignment.Data
    Bead.View.Content.Assignment.Page
    Bead.View.Content.Assignment.View
    Bead.View.Content.CourseAdmin.Page
    Bead.View.Content.CourseOverview.Page
    Bead.View.Content.Evaluation.Page
    Bead.View.Content.EvaluationTable.Page
    Bead.View.Content.GroupRegistration.Page
    Bead.View.Content.Home.Data
    Bead.View.Content.Home.Page
    Bead.View.Content.Home.View
    Bead.View.Content.NewTestScript.Page
    Bead.View.Content.Profile.Page
    Bead.View.Content.Public.ErrorPage
    Bead.View.Content.Public.Login
    Bead.View.Content.Public.Registration
    Bead.View.Content.Public.ResetPassword
    Bead.View.Content.Submission.Common
    Bead.View.Content.Submission.Page
    Bead.View.Content.SubmissionDetails.Page
    Bead.View.Content.SubmissionList.Page
    Bead.View.Content.TestScript.Page
    Bead.View.Content.UploadFile.Page
    Bead.View.Content.UserDetails.Page
    Bead.View.Content.UserSubmissions.Page
    Bead.View.Content.All
    Bead.View.Content.Bootstrap
    Bead.View.Content.Comments
    Bead.View.Content.GetSubmission
    Bead.View.Content.SeeMore
    Bead.View.Content.SubmissionTable
    Bead.View.Content.Utils
    Bead.View.ContentHandler
    Bead.View.DataBridge
    Bead.View.DataDir
    Bead.View.DictionaryLoader
    Bead.View.ErrorPage
    Bead.View.Headers.AcceptLanguage
    Bead.View.Fay.Hooks
    Bead.View.Fay.HookIds
    Bead.View.Fay.JSON.ServerSide
    Bead.View.I18N
    Bead.View.LoggedInFilter
    Bead.View.Login
    Bead.View.Logger
    Bead.View.Markdown
    Bead.View.Pagelets
    Bead.View.Registration
    Bead.View.RequestParams
    Bead.View.RouteOf
    Bead.View.Routing
    Bead.View.Session
    Bead.View.Style
    Bead.View.TemplateAndComponentNames
    Bead.View.Translation.Base
    Bead.View.Translation.Entries
    Bead.View.Translation.Enum
    Bead.View.Translation.I18N
    Bead.View.UserActions
    Bead.View.Validators
    Snap.Snaplet.Auth.Backends.SafeJsonFile
    Test.Tasty.Arbitrary
    Test.Tasty.RandomData
    Test.Tasty.TestSet

Executable Bead
  Build-Depends:    base, Bead
  Main-is:          Main.hs
  HS-Source-Dirs:   main
  Buildable:        True

Executable BeadAdmin
  Build-Depends:    base, Bead
  Main-is:          Admin.hs
  HS-Source-Dirs:   main
  if flag(Tests)
    Buildable:      False
  else
    Buildable:      True

test-suite BeadTest
  Type:
    exitcode-stdio-1.0
  Build-Depends:
    base == 4.7.0.1,
    Bead == 0.1.0.0,
    bytestring == 0.10.4.0,
    containers == 0.5.5.1,
    directory == 1.2.1.0,
    filepath == 1.3.0.2,
    HUnit == 1.2.5.2,
    QuickCheck,
    tasty == 0.8.1.3,
    tasty-hunit == 0.9.2,
    tasty-quickcheck == 0.8.3,
    temporary==1.2.0.3,
    time == 1.4.2,
    transformers >= 0.3 && < 0.5
  if flag(LDAP)
    CPP-Options: -DLDAPEnabled -DTEST
  else
    CPP-Options: -DEmailEnabled -DTEST
  if flag(SQLite)
    CPP-Options: -DTEST -DSQLITE
    Build-Depends:
      persistent-sqlite >= 1.3,
      persistent-template >= 1.3,
      resourcet >= 1.1
  else
    CPP-Options: -DTEST
  HS-Source-Dirs: test
  Main-is: TestMain.hs

