Name:                Bead
Version:             2015.2.1
License:             BSD3
synopsis:            Online assignment management system
Description:         E-learning snap based server for special teaching purposes
                     Administrators can submit exercises and students can submit
                     solutions for the given exercises.
Author:              Andor Penzes <andor.penzes@gmail.com>
Maintainer:          andor.penzes@gmail.com
Stability:           Experimental
Build-Type:          Simple
Cabal-Version:       >= 1.8

Data-Files:
  snaplets/fay/devel.cfg,
  snaplets/fay/src/Fay/JQueryUI.hs,
  snaplets/fay/src/DynamicContents.hs,
  snaplets/fay/src/Bead/Domain/Shared/Evaluation.hs,
  snaplets/fay/src/Bead/Shared/Command.hs,
  snaplets/fay/src/Bead/View/Validators.hs,
  snaplets/fay/src/Bead/View/Fay/HookIds.hs,
  snaplets/fay/src/Bead/View/Fay/Hooks.hs,
  snaplets/fay/src/Bead/View/Fay/JSON/ClientSide.hs,

  static/fonts/glyphicons-halflings-regular.woff,
  static/fonts/glyphicons-halflings-regular.ttf,
  static/bootstrap.custombutton.css,
  static/bootstrap.min.css,
  static/bootstrap.min.js,
  static/bootstrap-combobox.css,
  static/bootstrap-combobox.js,
  static/bootstrap-datetimepicker.min.css,
  static/bootstrap-datetimepicker.min.js,
  static/header.css,
  static/helpers.js,
  static/inside.css,
  static/jquery-ui.css,
  static/jquery.js,
  static/jquery-ui.js,
  static/moment.js,
  static/screen.css,
  static/images/*.png,
  static/images/*.gif,
  static/icon.ico,

  cookie

  lang/DictionaryHu.hs

  bead.config

Flag Tests
  Description:  Enable testing
  Default:      False

Flag MySQL
  Description:  Enable MySQL persistent layer
  Default:      True

Flag SSO
  Description:  Enable authentication with Single Sign-On
  Default:      True

Library
  HS-Source-Dirs: src, snaplets/fay/src
  GHC-Options: -threaded -with-rtsopts=-N2 -O2

  if flag(MySQL)
    CPP-Options: -DMYSQL

    Build-Depends:
      persistent-sqlite >= 2.2 && < 2.3,
      persistent-mysql >= 2.3 && < 2.4,
      persistent-template >= 2.1 && < 2.2,
      resourcet

    Exposed-Modules:
      Bead.Persistence.SQL
      Bead.Persistence.SQL.Assessment
      Bead.Persistence.SQL.Assignment
      Bead.Persistence.SQL.Class
      Bead.Persistence.SQL.Comment
      Bead.Persistence.SQL.Course
      Bead.Persistence.SQL.Entities
      Bead.Persistence.SQL.Evaluation
      Bead.Persistence.SQL.Feedback
      Bead.Persistence.SQL.FileSystem
      Bead.Persistence.SQL.Group
      Bead.Persistence.SQL.MySQL
      Bead.Persistence.SQL.JSON
      Bead.Persistence.SQL.Notification
      Bead.Persistence.SQL.Registration
      Bead.Persistence.SQL.Score
      Bead.Persistence.SQL.Submission
      Bead.Persistence.SQL.TestCase
      Bead.Persistence.SQL.TestData
      Bead.Persistence.SQL.TestFeedback
      Bead.Persistence.SQL.TestJob
      Bead.Persistence.SQL.TestScript
      Bead.Persistence.SQL.User

  Exposed-modules:
    Bead.Persistence.NoSQLDir
    Bead.Persistence.NoSQLDirFile
    Control.Monad.Transaction
    Control.Monad.Transaction.IO
    Control.Monad.Transaction.TIO

  if flag(Tests)
    CPP-Options: -DTEST

  if flag(SSO)
    CPP-Options: -DSSO

    Build-Depends:
      base64-bytestring >= 1.0.0.1 && < 2,
      either >= 4.3 && < 5

    Exposed-Modules:
      Bead.Daemon.LDAP
      Bead.Daemon.LDAP.Query
      Bead.Daemon.LDAP.Result
  else
    CPP-Options: -DEmailEnabled

    Exposed-Modules:
      Bead.Daemon.Email
      Bead.View.Content.SetUserPassword.Page
      Bead.View.EmailTemplate
      Bead.View.ResetPassword

  Build-Depends:
    aeson >=0.8 && <0.9,
    async >=2.0,
    base >=4.7 && <4.8,
    blaze-html >=0.8 && <0.9,
    blaze-markup >=0.7 && <0.8,
    bytestring >=0.10 && <0.11,
    clientsession >=0.9 && <0.10,
    containers >=0.5 && <0.6,
    cpphs >=1.19 && <1.20,
    deepseq >=1.3 && <1.4,
    directory >=1.2 && <1.3,
    ghc,
    ghc-paths,
    hashable >=1.2 && <1.3,
    haskell-src-exts >=1.16 && <1.17,
    HUnit >=1.2 && <1.3,
    fay >=0.23 && <0.24,
    fay-jquery >=0.6.1 && <0.7,
    fay-text >=0.3.2 && <0.3.3,
    filepath >=1.3 && <1.4,
    hastache >=0.6 && <0.7,
    json >=0.9 && <0.10,
    lens >=4.12 && <4.13,
    mime-mail >=0.4.9 && <0.4.10,
    MissingH >=1.3 && <1.4,
    MonadCatchIO-transformers >=0.3.1 && <0.3.2,
    monad-logger >=0.3.13 && <0.4,
    mtl >=2.0 && <2.4,
    old-locale == 1.0.0.6,
    pandoc >=1.14 && <1.16,
    persistent >=2.2 && <2.3,
    persistent-sqlite >=2.2 && <2.3,
    persistent-mysql >=2.3 && <2.4,
    persistent-template >=2.1 && <2.2,
    pqueue >=1.2.0 && <2.0,
    process >=1.2.0 && <2.0,
    random == 1.1,
    resourcet,
    regex-tdfa == 1.2.0,
    snap >=0.14 && <0.15,
    snap-core >=0.9 && <0.10,
    snap-server >=0.9 && <0.10,
    snap-blaze >=0.2 && <0.3,
    snaplet-fay >=0.3.3 && <0.3.4,
    stm == 2.4.4,
    syb >=0.5 && <0.6,
    template-haskell >=2.9 && <3.0,
    temporary == 1.2.0.3,
    text >=1.2 && <1.3,
    time == 1.4.2,
    timezone-olson >=0.1.7 && <0.1.8,
    timezone-series >=0.1.5 && <0.1.6,
    transformers >=0.3.0.0 && <0.5,
    tasty >=0.10 && <0.11,
    tasty-hunit >=0.9 && <0.10,
    tasty-quickcheck >=0.8.3 && <0.9,
    QuickCheck >=2.8 && <2.9,
    xmlhtml == 0.2.3.4,
    utf8-string >=1 && <2,
    unix == 2.7.0.1,
    yaml >=0.8 && <0.9

  Exposed-Modules:
    AdminMain
    SnapMain
    Bead.View.Dictionary
    Bead.View.Translation

    Paths_Bead
    Bead.Config
    Bead.Config.Configuration
    Bead.Config.Parser
    Bead.Controller.Logging
    Bead.Controller.Pages
    Bead.Controller.ServiceContext
    Bead.Controller.UserStories
    Bead.Daemon.Logout
    Bead.Daemon.TestAgent
    Bead.Domain.Entity.Assessment
    Bead.Domain.Entity.Assignment
    Bead.Domain.Entity.Comment
    Bead.Domain.Entity.Feedback
    Bead.Domain.Entity.Notification
    Bead.Domain.Entity.TestCase
    Bead.Domain.Entities
    Bead.Domain.Evaluation
    Bead.Domain.Func
    Bead.Domain.Relationships
    Bead.Domain.RolePermission
    Bead.Domain.Shared.Evaluation
    Bead.Domain.TimeZone
    Bead.Domain.Types
    Bead.Persistence.Guards
    Bead.Persistence.Initialization
    Bead.Persistence.Persist
    Bead.Persistence.Relations
    Bead.Shared.Command
    Bead.View.BeadContext
    Bead.View.BeadContextInit
    Bead.View.Command.Fayax
    Bead.View.Common
    Bead.View.Content
    Bead.View.Content.Administration.Page
    Bead.View.Content.Assignment.Data
    Bead.View.Content.Assignment.Page
    Bead.View.Content.Assignment.View
    Bead.View.Content.CourseAdmin.Page
    Bead.View.Content.CourseOverview.Page
    Bead.View.Content.Evaluation.Page
    Bead.View.Content.EvaluationTable.Page
    Bead.View.Content.GroupRegistration.Page
    Bead.View.Content.Home.Data
    Bead.View.Content.Home.Page
    Bead.View.Content.Home.View
    Bead.View.Content.NewTestScript.Page
    Bead.View.Content.Profile.Page
    Bead.View.Content.Public.ErrorPage
    Bead.View.Content.Public.Index
    Bead.View.Content.Public.Login
    Bead.View.Content.Public.Registration
    Bead.View.Content.Public.ResetPassword
    Bead.View.Content.Submission.Common
    Bead.View.Content.Submission.Page
    Bead.View.Content.SubmissionDetails.Page
    Bead.View.Content.SubmissionList.Page
    Bead.View.Content.TestScript.Page
    Bead.View.Content.UploadFile.Page
    Bead.View.Content.UserDetails.Page
    Bead.View.Content.UserSubmissions.Page
    Bead.View.Content.All
    Bead.View.Content.Bootstrap
    Bead.View.Content.Comments
    Bead.View.Content.GetSubmission
    Bead.View.Content.SeeMore
    Bead.View.Content.SubmissionTable
    Bead.View.Content.Utils
    Bead.View.Content.VisualConstants
    Bead.View.ContentHandler
    Bead.View.DataBridge
    Bead.View.DataDir
    Bead.View.DictionaryLoader
    Bead.View.ErrorPage
    Bead.View.Headers.AcceptLanguage
    Bead.View.Fay.Hooks
    Bead.View.Fay.HookIds
    Bead.View.Fay.JSON.ServerSide
    Bead.View.I18N
    Bead.View.LoggedInFilter
    Bead.View.Login
    Bead.View.Logger
    Bead.View.Markdown
    Bead.View.Pagelets
    Bead.View.Registration
    Bead.View.RequestParams
    Bead.View.RouteOf
    Bead.View.Routing
    Bead.View.Session
    Bead.View.Style
    Bead.View.TemplateAndComponentNames
    Bead.View.Translation.Base
    Bead.View.Translation.Entries
    Bead.View.Translation.Enum
    Bead.View.Translation.I18N
    Bead.View.UserActions
    Bead.View.Validators
    Snap.Snaplet.Auth.Backends.SafeJsonFile
    Test.Tasty.Arbitrary
    Test.Tasty.RandomData
    Test.Tasty.TestSet

Executable Bead
  Build-Depends:    base, Bead
  Main-is:          Main.hs
  HS-Source-Dirs:   main
  Buildable:        True

Executable BeadAdmin
  Build-Depends:    base, Bead
  Main-is:          Admin.hs
  HS-Source-Dirs:   main
  if flag(Tests)
    Buildable:      False
  else
    Buildable:      True

test-suite BeadTest
  Type:
    exitcode-stdio-1.0
  Build-Depends:
    base == 4.7.0.1,
    Bead == 2015.2.1,
    bytestring >=0.10 && <0.11,
    containers == 0.5.5.1,
    directory == 1.2.1.0,
    filepath == 1.3.0.2,
    HUnit == 1.2.5.2,
    QuickCheck >=2.8 && <2.9,
    tasty >=0.10 && <0.11,
    tasty-hunit >=0.9 && <0.10,
    tasty-quickcheck >=0.8.3 && <0.8.4,
    temporary == 1.2.0.3,
    time == 1.4.2,
    transformers >=0.3 && <0.5
  if flag(SSO)
    CPP-Options: -DSSO -DTEST
  else
    CPP-Options: -DEmailEnabled -DTEST
  if flag(MySQL)
    CPP-Options: -DTEST -DMYSQL
    Build-Depends:
      persistent-sqlite >=2.2 && <2.3,
      persistent-mysql >=2.3 && <2.4,
      persistent-template >=2.1 && <2.2,
      resourcet
  else
    CPP-Options: -DTEST
  HS-Source-Dirs: test
  Main-is: TestMain.hs

